fix whitespace around commands problem (ZEN-384); reviewed by Tim Sanders
git-svn-id: http://dev.zenoss.com/svnint/trunk/core@64842 f5df01ce-0320-0410-9ed9-ddcd13c732cc

--- a/Products/ZenUI3/browser/resources/css/streaming.css
+++ b/Products/ZenUI3/browser/resources/css/streaming.css
@@ -4,6 +4,12 @@ div.streaming-container {
   font-size: 12px;
   color: #eee;
 }
+
+
+div.streaming-line {
+  white-space:pre-wrap;
+}
+
 /* line 6, ../sass/streaming.scss */
 div.streaming-line.odd {
   color: #acc;
